Weight adjustments are now saved, weights are integers